crates/loxide_interpreter/tests/snapshots/integration@operator__not_equals.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
snapshot_kind: text
---
print nil != nil; // expect: false
// => bool(false)

print true != true; // expect: false
// => bool(false)
print true != false; // expect: true
// => bool(true)

print 1 != 1; // expect: false
// => bool(false)
print 1 != 2; // expect: true
// => bool(true)

print "str" != "str"; // expect: false
// => bool(false)
print "str" != "ing"; // expect: true
// => bool(true)

print nil != false; // error: type mismatch

print false != 0; // error: type mismatch

print 0 != "0"; // error: type mismatch


>>>>> Error Section <<<<<

  × Incompatible operand, nil is incompatible with boolean
    ╭─[12:7]
 11 │ 
 12 │ print nil != false; // error: type mismatch
    ·       ─┬─    ──┬──
    ·        │       ╰── has type `boolean` here
    ·        ╰── has type `nil` here
 13 │ print false != 0; // error: type mismatch
    ╰────

  × Incompatible operand, boolean is incompatible with number
    ╭─[13:7]
 12 │ print nil != false; // error: type mismatch
 13 │ print false != 0; // error: type mismatch
    ·       ──┬──    ┬
    ·         │      ╰── has type `number` here
    ·         ╰── has type `boolean` here
 14 │ print 0 != "0"; // error: type mismatch
    ╰────

  × Incompatible operand, number is incompatible with string
    ╭─[14:7]
 13 │ print false != 0; // error: type mismatch
 14 │ print 0 != "0"; // error: type mismatch
    ·       ┬    ─┬─
    ·       │     ╰── has type `string` here
    ·       ╰── has type `number` here
    ╰────
